# exercise-analyzer

./: README.md  exercise_analyzer.py  main.py  pyproject.toml  squat 2_analyzed_analysis.json
