[project]
name = "exercise-form-checker"
version = "0.1.0"
description = "Exercise form analysis using pose estimation"
authors = [
    {name = "Rudy",email = "rudraksh.monga@mail.utoronto.ca"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mediapipe (>=0.10.20,<0.11.0)",
    "opencv-python (>=4.10.0.84,<5.0.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ultralytics (>=8.3.59,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
