[project]
name = "exercise-form-checker"
version = "0.1.0"
description = "Exercise form analysis using pose estimation"
authors = [
    {name = "Rudy",email = "rudraksh.monga@mail.utoronto.ca"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mediapipe (>=0.10.20,<0.11.0)",
    "opencv-python (>=4.10.0.84,<5.0.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ultralytics (>=8.3.59,<9.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "mmengine (>=0.10.5,<0.11.0)",
    "mmcv (>=2.2.0,<3.0.0)",
    "mmdet (>=3.3.0,<4.0.0)",
    "pip (>=24.3.1,<25.0.0)",
    "setuptools (==65.5.1)",
    "openmim (>=0.3.9,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
